editing and commentary.
Getting close to where I would be comfortable to make it public.
Next time I work on it, I should make an explicit list of things
I want to fix up/complete before doing so.

--- a/series-formelles.bib
+++ b/series-formelles.bib
@@ -175,3 +175,26 @@
   title =	"Combinatorial species and tree-like structures",
   year = 	"1998",
 },
+
+@MISC {trimble-not-analytic,
+    TITLE = {Answer to ``{E}xamples of functors $\mathbf{Set} \to \mathbf{Set}$ which are not analytic''},
+    AUTHOR = {Todd Trimble},
+    HOWPUBLISHED = {MathOverflow},
+    NOTE = {URL: \url{http://mathoverflow.net/a/171456} (visited on 2014-06-10)},
+    URLDATE = {2014-06-10},
+    YEAR = {2014}
+}
+
+@incollection{joyal86,
+  year={1986},
+  isbn={978-3-540-17207-9},
+  booktitle={Combinatoire \'{E}num\'{e}rative},
+  volume={1234},
+  series={Lecture Notes in Mathematics},
+  editor={Labelle, Gilbert and Leroux, Pierre},
+  doi={10.1007/BFb0072514},
+  title={Foncteurs analytiques et esp\`{e}ces de structures},
+  publisher={Springer Berlin Heidelberg},
+  author={Joyal, Andr{\'e}},
+  pages={126-159}
+},
